--- a/game/index.css
+++ b/game/index.css
@@ -1,3 +1,59 @@
-h1 {
-	color:red;
+section{
+	width: 100vw;
+	height:45vw;
+	display: flex;
+	justify-content:space-around;
+	flex-wrap: wrap;
+}
+
+div.game-board {
+	width:6.5vw;
+	height:45vw;
+	border:1px solid black;
+	padding:0;
+	margin:0 auto;
+	flex-grow:1;
+	display:flex;
+	flex-direction:column;
+/*	background-image: url(pics/IT.gif);
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-position: bottom;*/
+}
+
+div.token{
+	width: 5vw;
+	height: 5vw;
+	box-sizing: border-box;
+	border:1px black solid;
+	-moz-border-radius: 2.5vw;
+	-webkit-border-radius: 2.5vw;
+	border-radius: 2.5vw;
+	margin: 0 auto;
+}
+
+div.white{
+	background:white;
+}
+
+div.black{
+	background:black;
+	border:1px white solid;
+}
+
+#bump{
+	background:brown;
+}
+
+#home1{
+	background:black;
+	color:white;
+}
+
+#home2{
+	background:gray;
+}
+
+.hide{
+	display:none;
 }
