--- a/game/index.css
+++ b/game/index.css
@@ -1,6 +1,20 @@
+
+body{
+	width: 96.5vw;
+	height:76.8vh;
+	min-width: 310px;
+/*	background-image: url(pics/Board.gif);
+	background-size: 94vw 92vw;
+	background-repeat: no-repeat;*/
+	padding-top:1.4vw;
+	padding-left:.8vw;
+	display: flex;
+	justify-content:space-around;
+	flex-wrap: wrap;
+}
 section{
-	width: 100vw;
-	height:45vw;
+	width: 96.5vw;
+	height:40vw;
 	display: flex;
 	justify-content:space-around;
 	flex-wrap: wrap;
@@ -8,7 +22,7 @@ section{
 
 div.game-board {
 	width:6.5vw;
-	height:45vw;
+	height:40vw;
 	border:1px solid black;
 	padding:0;
 	margin:0 auto;
@@ -42,7 +56,8 @@ div.black{
 }
 
 #bump{
-	background:brown;
+	/*background:brown;*/
+	width:2vw;
 }
 
 #home1{
@@ -55,5 +70,13 @@ div.black{
 }
 
 .hide{
-	display:none;
+	display: none;
+}
+
+.top{
+	align-content:flex-start;
+}
+
+.bottom{
+	align-content: flex-end;
 }
